--- a/style.scss
+++ b/style.scss
@@ -76,14 +76,16 @@
     justify-content: center;
     align-items: center;
 
-    h1 { font-weight: bold; }
+    h1 { 
+      font-weight: bold; 
+    }
 
     h1, h5 {
       padding: 5px 0px;
     }
 
     .home__section--content-note {
-      padding: 40px 0px;
+      padding: 20px 0px;
     }
 
     .home__section--content-note h3 {
@@ -100,7 +102,7 @@
 
       .btn {
         padding: 10px 48px;
-        font-size: 18px;
+        font-size: 14px;
         font-weight: 300;
         border-radius: 8px;
       }
@@ -112,11 +114,11 @@
 
       .btn {
         width: 30%;
-        padding: 10px 48px;
-        font-size: 18px;
+        text-align: center;
+        padding: 10px 0px;
+        font-size: 16px;
         font-weight: 300;
         border-radius: 8px;
-        margin-bottom: 15px;
       }
 
       p {
@@ -156,7 +158,7 @@
   align-items: center;
 
   h2 {
-    font-size: 26px;
+    font-size: 24px;
     width: 39%;
     text-align: center;
   }
@@ -232,4 +234,37 @@
     font-weight: 600;
     text-decoration: underline;
   }
+}
+
+// *** About Page ***
+.about__content--container {
+  width: 72%;
+  margin: 50px;
+  
+  .about__content--text h4 {
+    font-size: 26px;
+  }
+
+  .about__content--partners,
+  .about__content--press {
+    margin: 40px 0px;
+    padding: 20px 0px;
+  }
+
+  .about__content--press {
+    width: 78%;
+  }
+
+
+  .about__content--partners-layout {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+
+    img {
+      height: 100px;
+    }
+  }
+
+
 }
